--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Designed and developed by 2022 skydoves (Jaewoong Eum)
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -49,6 +48,8 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+
+
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
@@ -79,6 +80,19 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/tv_bug"
+      android:layout_width="100dp"
+      android:layout_height="40dp"
+      android:gravity="center"
+      android:background="@color/black"
+      android:onClick="@{()->vm.fetchBugData()}"
+      android:text="@{vm.bugData}"
+      android:textColor="@color/bug"
+      android:textSize="16sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
